...
                android:id="@+id/negative_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:backgroundTint="#E57373"
                android:text="Discard"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <Button
            android:id="@+id/neutral_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#9E9E9E"
            android:text="Cancel"
            android:textColor="@android:color/white" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
